--- a/Assignment1/Module1_Solution/index.html
+++ b/Assignment1/Module1_Solution/index.html
@@ -7,22 +7,30 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
-  </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
 
-         <div class="form-group">
-             <input id="lunch-menu" type="text"
+  </head>
+<body ng-app="myFirstApp">
+   <div class="container" ng-controller="MyFirstController" >
+     <form name="form1">
+       <h1>Lunch Checker</h1>
+
+         <div class="form-group" >
+             <input id="lunch-menu" type="text" ng-model="lunchitems" required ;
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control">
+
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="countItems()">Check If Too Much</button>
+
          </div>
          <div class="form-group message">
            <!-- Your message can go here. -->
+{{message}}
          </div>
+       </form>
    </div>
 
 </body>
